--- a/src/App.css
+++ b/src/App.css
@@ -231,7 +231,8 @@ color: white;
   }
   .thumb img.active{
     opacity: 1;
-    border: 1px solid lightseagreen;
+    border: 1px solid rgba(0, 140, 255, 0.733);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.253)
   }
   /*
   .box .cart{
